[package]
name = "sdf-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemfiles = "0.10"
clap = {version="4.4.6", features=["derive"]}

[[bin]]
name = "sdf-partition"
path = "src/partition/main.rs"